<package>
  <name>app_manager</name>
  <version>0.0.0</version>
  <description>
     app_manager
  </description>
  <maintainer email="foo@foo.com">Jeremy Leibs, Ken Conley</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/app_manager</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>roslaunch</run_depend>
  <build_depend>rosgraph</build_depend>
  <run_depend>rosgraph</run_depend>
  <build_depend>rosunit</build_depend>
  <run_depend>rosunit</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
</package>
